# Assignment-Omni

./: .gitignore  README.md  env.example  langsmith_evaluation_20250911_023518.json  langsmith_evaluation_report_20250911_023518.md  pyproject.toml  run_tests.py
scripts/: generate_langsmith_report.py  test_graph.py  test_langsmith_evaluation.py  test_llm.py  test_pdf_utils.py  test_qdrant_store.py  test_rag_node.py  test_retriever.py  test_router.py  test_weather_client.py  test_weather_node.py
src/assignment_omni/: __init__.py  main.py
src/assignment_omni/app/: ui.py
src/assignment_omni/clients/: weather.py
src/assignment_omni/config/: settings.py
src/assignment_omni/eval/: harness.py  langsmith_evaluator.py
src/assignment_omni/graph/: nodes.py  pipeline.py
src/assignment_omni/llm/: wrapper.py
src/assignment_omni/rag/: pdf_utils.py  retriever.py
src/assignment_omni/vectorstore/: qdrant_store.py
tests/: test_api_handling.py  test_llm_processing.py  test_retrieval_logic.py  test_runner.py  test_weather_client.py
